--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-   <script type="module" src="/src/index.tsx"></script>
+   <script type="module" src="./src/index.tsx"></script>
 <style>
       .font-cinzel {
         font-family: 'Cinzel', serif;
